提交信息内容

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </thead>
             <tbody></tbody>
           </table>
-          <!-- 版权信息从这里开始 -->
+<!--          版权信息从这里开始
           <a href="https://github.com/zkeq/news">
             <p style="color: #ff1485;">
               Made with ❤ by zkeq.
@@ -78,7 +78,7 @@
             <img src="https://img.shields.io/github/stars/zkeq/news?style=social" alt="github/news" srcset="">
           </p>
         </a>
-        <!-- 版权信息从这里结束，想要去掉版权的话 只需要注释掉这些部分就好啦 -->
+        <!-- 版权信息从这里结束，想要去掉版权的话 只需要注释掉这些部分就好啦 --> -->
         </figure>
       </div>
     </div>
